k8s-manifests/dev/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: dev
  # labels:
  #   app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1001
      containers:
        - name: notification-service
          image: thanusri22/notification-service:v1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3004
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 3004
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 3004
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: dev
spec:
  selector:
    app: notification-service
  ports:
    - port: 3004
      targetPort: 3004
  type: ClusterIP
