k8s-manifests/dev/task-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: dev
  # labels:
  #   app: task-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1001
      containers:
        - name: task-service
          image: thanusri22/task-service:v1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: dev
spec:
  selector:
    app: task-service
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
