k8s-manifests/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: task-route
  namespace: dev
spec:
  parentRefs:
    - name: task-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /auth
      backendRefs:
        - name: auth-service
          port: 3001
    - matches:
        - path:
            type: PathPrefix
            value: /api/users
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /users
      backendRefs:
        - name: user-service
          port: 3002
    - matches:
        - path:
            type: PathPrefix
            value: /api/tasks
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /tasks
      backendRefs:
        - name: task-service
          port: 3003
    - matches:
        - path:
            type: PathPrefix
            value: /api/notifications
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /notifications
      backendRefs:
        - name: notification-service
          port: 3004
    - matches:
        - path:
            type: PathPrefix
            value: /api/analytics
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /analytics
      backendRefs:
        - name: analytics-service
          port: 3005
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
